blockml/test/errors/12_chart/e185/e185d.dashboard
dashboard: e185d
title: 'sales'
reports:
- title: 'overview'
  select:
  - a.dim1
  model: e185m
  type: 'gauge_linear'
  data:
    value_field: a.dim1
  axis:
    x_axis:   
      - abc: unk


